Home Page Adjustment && Changing default locale language to English

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -209,7 +209,7 @@ a.modal-question {
     height: 200px;
     line-height: 200px;
     background-color: #000000;
-    border: 2px solid #c51f1a;
+    border: 2px solid #0077b5;
     color: #fff;
     font-size: 500%;
     text-align: center;
