--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -209,7 +209,7 @@ a.modal-question {
     height: 200px;
     line-height: 200px;
     background-color: #000000;
-    border: 2px solid #0077b5;
+    border: 2px solid #000;
     color: #fff;
     font-size: 500%;
     text-align: center;
@@ -221,6 +221,10 @@ a.modal-question {
     @media screen and (max-width: 750px) {
         font-size: 27px;
     }
+}
+
+.card-body {
+    border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 
