--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -280,6 +280,14 @@ a.bell-link.hasNotification {
     }
 }
 
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 @media (max-width: 640px) {
     .dropdown-menu.notifications {
         top: 50px;
