--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -208,7 +208,7 @@ a.modal-question {
     width: 100%;
     height: 200px;
     line-height: 200px;
-    background-color: #000000;
+    background-color: $link-color;
     border: 2px solid #000;
     color: #fff;
     font-size: 500%;
